fixed alignment

--- a/src/sass/layout.sass
+++ b/src/sass/layout.sass
@@ -169,7 +169,7 @@ li
   height: 55px
   width: 80px
   margin-top: -50px
-  margin-bottom: -5px
+  margin-bottom: -3px
   margin-left: 5px
 
 #alert_button_alt:hover
@@ -182,7 +182,7 @@ li
   height: 55px
   width: 80px
   margin-top: -52px
-  margin-bottom: -5px
+  margin-bottom: -3px
   margin-left: 90px
 
 #list_button_alt:hover
@@ -196,7 +196,7 @@ li
   height: 50px
   width: 150px
   margin-left: 14px
-  margin-top: 8px
+  margin-top: 5px
   
 #add_button_alt:hover
   background-image: url('../img/add_alt_hover.png')
